JavaBean   java Servlet

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 sq11/.settings/org.eclipse.wst.jsdt.ui.superType.name
 sq11/.settings/
+.metadata/.me_tcat85/
+.metadata/.plugins/
+.metadata/com.genuitec.eclipse.webclipse.livepreview/
