更改h4为h5 文档类型

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ sq11/.settings/
 .metadata/.me_tcat85/
 .metadata/.plugins/
 .metadata/com.genuitec.eclipse.webclipse.livepreview/
+servlet12/.settings/
